...
      h1 {
        font-size: 5em;
      }
    </style>
    <div>
      <h1>3DS demo challenge</h1>
      <a href="https://www.checkout.com/?cko-payment-token=test-token">Success</a>
      <a href="https://www.checkout.com/">Success without token</a>
      <a href="https://www.example.com/">Failure</a>
      <a href="https://www.google.com/">Other</a>
    </div>
  </html>
  """.trimmingCharacters(in: .whitespaces)
...
