<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina4_7" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="iOS_Example_Custom" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bqt-KB-dc0" customClass="CardNumberInputView" customModule="Frames">
                                <rect key="frame" x="16" y="68" width="343" height="48"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="wPC-kg-pgk"/>
                                </constraints>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="text" value="Card number"/>
                                    <userDefinedRuntimeAttribute type="string" keyPath="placeholder" value="4242"/>
                                </userDefinedRuntimeAttributes>
                            </view>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5di-xs-i3x" customClass="ExpirationDateInputView" customModule="Frames">
                                <rect key="frame" x="16" y="124" width="343" height="48"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="hCc-DY-Plc"/>
                                </constraints>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="text" value="Expiration date"/>
                                    <userDefinedRuntimeAttribute type="string" keyPath="placeholder" value="06/2019"/>
                                </userDefinedRuntimeAttributes>
                            </view>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fsh-lO-5Pq" customClass="CvvInputView" customModule="Frames">
                                <rect key="frame" x="16" y="180" width="343" height="48"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="TPl-Zk-jGq"/>
                                </constraints>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="text" value="Cvv"/>
                                    <userDefinedRuntimeAttribute type="string" keyPath="placeholder" value="100"/>
                                </userDefinedRuntimeAttributes>
                            </view>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A6a-5t-e69">
                                <rect key="frame" x="16" y="236" width="343" height="30"/>
                                <state key="normal" title="Button"/>
                                <connections>
                                    <action selector="onTapPay:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3wd-JW-HKP"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" red="0.13333333333333333" green="0.16078431372549018" blue="0.18431372549019609" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="A6a-5t-e69" secondAttribute="trailing" constant="16" id="0vE-2O-jaK"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="bqt-KB-dc0" secondAttribute="trailing" constant="16" id="3oG-iX-34u"/>
                            <constraint firstItem="bqt-KB-dc0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="5F4-YD-dqU"/>
                            <constraint firstItem="5di-xs-i3x" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="DPQ-J2-Dqa"/>
                            <constraint firstItem="A6a-5t-e69" firstAttribute="top" secondItem="fsh-lO-5Pq" secondAttribute="bottom" constant="8" id="I6z-fY-OPp"/>
                            <constraint firstItem="bqt-KB-dc0" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="68" id="S59-hl-HEP"/>
                            <constraint firstItem="A6a-5t-e69" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="avT-ct-mTZ"/>
                            <constraint firstItem="5di-xs-i3x" firstAttribute="top" secondItem="bqt-KB-dc0" secondAttribute="bottom" constant="8" id="g8v-LO-qPa"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="5di-xs-i3x" secondAttribute="trailing" constant="16" id="iJI-Gt-aBh"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="fsh-lO-5Pq" secondAttribute="trailing" constant="16" id="jCf-XD-M5S"/>
                            <constraint firstItem="fsh-lO-5Pq" firstAttribute="top" secondItem="5di-xs-i3x" secondAttribute="bottom" constant="8" id="teW-9b-oyo"/>
                            <constraint firstItem="fsh-lO-5Pq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="zfr-xj-hjb"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="cardNumberView" destination="bqt-KB-dc0" id="yoa-La-ZuU"/>
                        <outlet property="cvvView" destination="fsh-lO-5Pq" id="W3P-7r-daq"/>
                        <outlet property="expirationDateView" destination="5di-xs-i3x" id="Hzg-bz-PP3"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="117.59999999999999" y="88.605697151424295"/>
        </scene>
    </scenes>
</document>
